--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">EffectiveMobile</string>
+    <string name="eneter_in_acc">Вход в личный кабинет</string>
+    <string name="finder_work">Поиск работы</string>
+    <string name="continu">Продолжить</string>
+    <string name="enter_with_pas">Войти с паролем</string>
 </resources>
