--- a/auth/feauture_auth/src/main/res/values/strings.xml
+++ b/auth/feauture_auth/src/main/res/values/strings.xml
@@ -3,6 +3,12 @@
     <string name="app_name">EffectiveMobile</string>
     <string name="eneter_in_acc">Вход в личный кабинет</string>
     <string name="finder_work">Поиск работы</string>
+    <string name="finder_employee">Поиск сотрудников</string>
     <string name="continu">Продолжить</string>
     <string name="enter_with_pas">Войти с паролем</string>
+    <string name="posting_vacancies">Размещение вакансий и доступ к базе резюме</string>
+    <string name="i_find_employee">Я ищу сотрудников</string>
+    <string name="send">Отправили код на %s</string>
+    <string name="write_pin_code">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
+    <string name="confirm">Подтвердить</string>
 </resources>
