--- a/auth/feauture_auth/src/main/res/values/strings.xml
+++ b/auth/feauture_auth/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="send">Отправили код на %s</string>
     <string name="write_pin_code">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
     <string name="confirm">Подтвердить</string>
+    <string name="email">Электронная почта или телефон</string>
 </resources>
